--- a/fort-user-service/.settings/org.eclipse.wst.common.component
+++ b/fort-user-service/.settings/org.eclipse.wst.common.component
@@ -13,6 +13,9 @@
         <dependent-module archiveName="fort-commons-0.0.1-SNAPSHOT.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/fort-commons/fort-commons">
             <dependency-type>uses</dependency-type>
         </dependent-module>
+        <dependent-module archiveName="fort-datasource-commons-0.0.1-SNAPSHOT.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/fort-datasource-commons/fort-datasource-commons">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
         <property name="context-root" value="fort-user-service"/>
         <property name="java-output-path" value="/fort-user-service/target/classes"/>
     </wb-module>
